--- a/Binnacle/app/src/main/AndroidManifest.xml
+++ b/Binnacle/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
           package="xyz.willnwalker.binnacle">
 
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
             android:allowBackup="true"
